--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     <h2>Have A Question</h2>
                     <div class = "contact-item">
                         <span>
-                            <a href="https://goo.gl/maps/qWAPiZF8TV6hWwqw9><i class = "fas fa-map-marker-alt"></i></a>
+                            <a href="https://goo.gl/maps/qWAPiZF8TV6hWwqw9"><i class = "fas fa-map-marker-alt"></i></a>
                         </span>
                         <span>
                             Phagwara , Punjab , INDIA
