--- a/index.html
+++ b/index.html
@@ -332,10 +332,12 @@
                     <h2>Have A Question</h2>
                     <div class = "contact-item">
                         <span>
-                            <a href="https://goo.gl/maps/qWAPiZF8TV6hWwqw9"><i class = "fas fa-map-marker-alt"></i></a>
+                            <i class = "fas fa-map-marker-alt"></i>
                         </span>
                         <span>
-                            Phagwara , Punjab , INDIA
+                            <a href="https://goo.gl/maps/qWAPiZF8TV6hWwqw9">
+                                Phagwara , Punjab , INDIA
+                            </a>     
                         </span>
                     </div>
                     <div class = "contact-item">
