--- a/index.html
+++ b/index.html
@@ -353,7 +353,9 @@
                             <i class = "fas fa-envelope"></i>
                         </span>
                         <span>
-                            hotelroyalpalace@gmail.com
+                            <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">
+                                hotelroyalpalace@gmail.com
+                            </a>
                         </span>
                     </div>
                 </div>
