--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                             <i class = "fas fa-envelope"></i>
                         </span>
                         <span>
-                            <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">
+                            <a href="https://mail.google.com/mail/">
                                 hotelroyalpalace@gmail.com
                             </a>
                         </span>
