--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <div class = "footer-container">
                 <div>
                     <h2>About Us </h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque sapiente mollitia doloribus provident? Eos quisquam aliquid vel dolorum, impedit culpa.</p>
+                    <p>At Royal Palace we strive to be the first choice in the mind of guests, owners and talent. In our journey to achieve this, we practice strong beliefs and actions that respect the diversity of people, the community, ethics and the planet.</p>
                     <ul class = "social-icons">
                         <li class = "flex">
                             <a href="https://twitter.com/i/flow/login"> <i class = "fa fa-twitter fa-2x"></i></a>
