--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                         </span>
                     </div>
                     <div class = "service-content">
-                        <h2>Room Security</h2>
-                        <p>The company itself is a very successful company. We accuse the cares of flattery at a time when the services are harsher. The necessity of choosing him especially for those who praise him, unless he is spared pain and suffering like that and similar pleasures, for the distinction of bearing, to that same thing, every thing from the rejection of the body is rejected!</p>
+                        <h2>Hotel Security</h2>
+                        <p>Trained Security Guards are there in each and every corners of the hotel. Surveillance Cameras are also present with 24/7 surveillance. Fire Alarms are there for emergency. Keycard Locks are ther to ensure more safety.</p>
                         <button type = "button" class = "btn">Know More</button>
                     </div>
                 </article>
