--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class = "service-content">
                         <h2>Hotel Security</h2>
-                        <p>Trained Security Guards are there in each and every corners of the hotel. Surveillance Cameras are also present with 24/7 surveillance. Fire Alarms are there for emergency. Keycard Locks are ther to ensure more safety.</p>
+                        <p>Trained Security Guards are there in each and every corners of the hotel. Surveillance Cameras are also present with 24/7 surveillance. Fire Alarms are there for emergency. Keycard Locks are ther to ensure more safety. If any guest forgets there things behind after checking out the object are stored to safe room and guest are informed to took the things back from the reception . </p>
                         <button type = "button" class = "btn">Know More</button>
                     </div>
                 </article>
