--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class = "service-content">
                         <h2>Refreshment</h2>
-                        <p>The company itself is a very successful company. We accuse the cares of flattery at a time when the services are harsher. The necessity of choosing him especially for those who praise him, unless he is spared pain and suffering like that and similar pleasures, for the distinction of bearing, to that same thing, every thing from the rejection of the body is rejected!</p>
+                        <p>Hotel Royal Palace is a mood refreshing hotel situated in phagwara. The features are amazing here because of the company. Our company aims to give total relaxation to there guests and let them forget all there problems for some days. There are pools, gyms and some cultural shows in the evening for the guests.</p>
                         <button type = "button" class = "btn">Know More</button>
                     </div>
                 </article>
