--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class = "service-content">
                         <h2>Housekeeping</h2>
-                        <p>The company itself is a very successful company. We accuse the cares of flattery at a time when the services are harsher. The necessity of choosing him especially for those who praise him, unless he is spared pain and suffering like that and similar pleasures, for the distinction of bearing, to that same thing, every thing from the rejection of the body is rejected!</p>
+                        <p>We’re committed to providing you with a clean and comfortable stay. Our updated hotel experience provides housekeeping services every third day or upon request, whichever comes first. Want to reuse your towel? We’ll leave you to it! Need more coffee or soap? Just let us know. This policy is applicable at all hotel brands with the exception of Royal Palace. Housekeeping services will continue to be provided daily at Royal Palacelocations.</p>
                         <button type = "button" class = "btn">Know More</button>
                     </div>
                 </article>
