--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class = "service-content">
                         <h2>Refreshment</h2>
-                        <p>Hotel Royal Palace is a mood refreshing hotel situated in phagwara. The features are amazing here because of the company. Our company aims to give total relaxation to there guests and let them forget all there problems for some days. There are pools, gyms and some cultural shows in the evening for the guests.</p>
+                        <p>Hotel Royal Palace is a mood refreshing hotel situated in Phagwara. The features are amazing here because of the company. Our company aims to give total relaxation to there guests and let them forget all there problems for some days. There are pools, gyms and some cultural shows in the evening for the guests.</p>
                         <button type = "button" class = "btn">Know More</button>
                     </div>
                 </article>
