--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HOTEL RP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/main.css">
-  <script src="img/https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
   <link rel="icon" href="img/logo.png" type="image/png">
 </head>
 
